--- a/pacman/index.html
+++ b/pacman/index.html
@@ -1,9 +1,9 @@
 <!doctype html><html class="no-js" lang=""><head><meta charset="utf-8"><meta name="description" content=""><meta id="viewport" name="viewport" content="width=320,user-scalable=0"><!-- <meta id="viewport" name="viewport" content="width=device-width, initial-scale=1, user-scalable=0"> --><title>Every F*ckin Mile</title>
 <meta property="og:title" content="Every F*ckin Mile | 123Milhas">
 <meta property="og:type" content="website">
-<meta property="og:url" content="http://everyfuckinmile.com/">
+<meta property="og:url" content="http://tonussi.com/pacman/">
 <meta property="og:site_name" content="Every F*ckin Mile">
-<meta property="og:image" content="http://everyfuckinmile.com/introducao.jpg">
+<meta property="og:image" content="http://tonussi.com/pacman/introducao.jpg">
 <meta property="og:image:type" content="image/jpeg">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="650">
